# stm32-unified-crate

./: Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  main.rs
svd/: STM32F40x.tmpl.svd  adc_c.svd.frag  adc_n.svd.frag  can.svd.frag  crc.svd.frag  crypt.svd.frag  dac.svd.frag  dbg.svd.frag  dcmi.svd.frag  dma.svd.frag  dma2d.svd.frag  enet_dma.svd.frag  enet_mac.svd.frag  enet_mmc.svd.frag  enet_ptp.svd.frag  exti.svd.frag  flash.svd.frag  fmc.svd.frag  fsmc.svd.frag  gpio.svd.frag  hash.svd.frag  i2c.svd.frag  iwdg.svd.frag  ltdc.svd.frag  nvic.svd.frag  pwr.svd.frag  rcc.svd.frag  rng.svd.frag  rtc.svd.frag  sai.svd.frag  sdio.svd.frag  spi.svd.frag  syscfg.svd.frag  timer.svd.frag  usart.svd.frag  usbotg_device.svd.frag  usbotg_global.svd.frag  usbotg_host.svd.frag  usbotg_pwrclk.svd.frag  wwdg.svd.frag
